# Viscos

./: .cursorrules  .gitignore  COMPREHENSIVE-AUDIT-STUBS-AND-TODOS-2026-06-19.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: deny.toml
.cursor/commands/: adr-new.md  checkpoint.md  start-phase.md
.cursor/packets/: packet-0001-cargo-workspace.md  packet-0002-granular-tokio.md  packet-0003-config-library.md  packet-0004-ci-pipeline.md  packet-0005-release-profile.md  packet-0006-rust-toolchain.md  packet-0007-error-handling.md  packet-0008-discord-api-twilight.md  packet-0010-cache-stack.md  packet-0011-auth-stack.md  packet-0012-frontend-hybrid.md
.cursor/plans/: FOLLOW-UP-REAL-WORLD-WORK.md  bridge-resilience-research.md  cache-stack-research.md  phase-0.0-foundation.md  phase-0.5-ai-workflow-setup.md  phase-1.0-window-webview.md  phase-1.5-telemetry-and-restart-optimization.md  phase-1.6-cef-default-rollout-dalga-1b.md  phase-1.6-cef-default-rollout.md  phase-2.0-discord-api.md  phase-3.0-gateway.md  phase-4.0-cache-media.md  phase-5.0-native-ui.md  phase-6.0-hotkeys.md  phase-7.0-voice-video.md  phase-8.0-distribution.md  phase-8.5-cef-backend.md  viscos_auth_research.md  viscos_index.md  webview2-hardening.md
.cursor/templates/: bugfix.md  crud-entity.md  feature-add.md  refactor.md  spike.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ai-task-validate.yml  cef-backend.yml  ci.yml  release.yml  size-gate.yml
config/: default.toml  local.toml.example
crates/viscos/: Cargo.toml
crates/viscos-api/: Cargo.toml
crates/viscos-api/src/: error.rs  events.rs  gateway.rs  gateway_cache_bridge.rs  lib.rs  rest.rs
crates/viscos-api/src/gateway_cache_bridge/: tests.rs
crates/viscos-api/tests/: events_try_from.rs  gateway_intents.rs  rest_integration.rs
crates/viscos-auth/: Cargo.toml
crates/viscos-auth/src/: disclaimer.rs  flow.rs  lib.rs  login.rs  login_http.rs  mfa.rs  shadow_mode.rs  storage.rs  super_properties.rs  token.rs  transport.rs
crates/viscos-auth/tests/: captcha_redirect.rs  keyring_round_trip.rs  mfa_backup_codes.rs  mfa_totp.rs  secrecy_audit.rs  shadow_mode.rs  super_properties.rs
crates/viscos-cache/: Cargo.toml
crates/viscos-cache/migrations/: V001__initial.sql
crates/viscos-cache/src/: cache.rs  db.rs  error.rs  facade.rs  facade_tests.rs  lib.rs  tier.rs
crates/viscos-cache/src/repository/: channel.rs  guild.rs  message.rs  mod.rs
crates/viscos-cache/tests/: integration_test.rs
crates/viscos-config/: Cargo.toml
crates/viscos-config/src/: lib.rs  path.rs
crates/viscos-core/: Cargo.toml
crates/viscos-core/src/: events.rs  lib.rs  traits.rs  types.rs
crates/viscos-distribution/: Cargo.toml
crates/viscos-distribution/src/: cef_manager.rs  cef_update.rs  chromium_flags.rs  crash.rs  lib.rs  profile.rs  signing.rs  updater.rs
crates/viscos-distribution/tests/: cef_manager.rs  cef_update.rs.disabled  chromium_flags.rs  crash_opt_in.rs  signing.rs  updater_check.rs.disabled
crates/viscos-error/: Cargo.toml
crates/viscos-error/src/: lib.rs
crates/viscos-ipc/: Cargo.toml
crates/viscos-ipc/src/: buffer.rs  command.rs  docs.rs  event.rs  lib.rs  router.rs  types.rs
crates/viscos-log/: Cargo.toml
crates/viscos-log/src/: lib.rs
crates/viscos-media/: Cargo.toml
crates/viscos-media/src/: cache.rs  encryption.rs  lib.rs  refresh.rs
crates/viscos-media/tests/: encryption_test.rs  refresh.rs
crates/viscos-shell/: Cargo.toml
crates/viscos-shell/src/: frame_timer.rs  lib.rs  stubs.rs  window.rs
crates/viscos-shell/src/integration/: audio.rs  autostart.rs  deep_link.rs  drag_drop.rs  hotkeys.rs  mod.rs  single_instance.rs  webview_refresh.rs
crates/viscos-shell/src/integration/hotkeys/: controller.rs  manager.rs  mod.rs  types.rs
crates/viscos-shell/src/native/: iced_spike.rs  mod.rs  native_bridge.rs  notify.rs  panel.rs  theme.rs
crates/viscos-shell/src/window/: config.rs  event_loop.rs  mod.rs  shell.rs  tray.rs
crates/viscos-shell/tests/: deep_link_parser.rs  hotkey_manager.rs  single_instance.rs  theme_palette.rs  viscos_native_bridge.rs
crates/viscos-telemetry/: Cargo.toml
crates/viscos-telemetry/src/: error.rs  lib.rs  sink.rs  store.rs
crates/viscos-watchdog/: Cargo.toml
crates/viscos-watchdog/src/: autosave.rs  gdi.rs  lib.rs  restart.rs  watchdog.rs
crates/viscos-webview/: BRIDGE-RESILIENCE.md  Cargo.toml  README.md
crates/viscos-webview/src/: backend.rs  cef.rs  lib.rs  stubs.rs  webview2.rs
crates/viscos-webview/tests/: cef_lifecycle.rs  is_windows_11_runtime.rs  rdp_detection.rs  resolve_backend_priority.rs
crates/viscos-webview/tests/fixtures/: cef_fake.sh
crates/viscos/src/: main.rs
crates/viscos/tests/: cli_parsing.rs
docs/: ADR-INDEX.md  AI-WORKFLOW.md  CEF-VS-WEBVIEW2.md  DECISIONS.md
frontend/: .eslintrc.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/eslint-rules/: no-hashed-class-selector.js
frontend/src/: bridge.ts  native-bridge.ts  plugin-loader.ts  webpack-shim.ts
frontend/src/ipc/: commands.ts  events.ts  types.ts
frontend/tests/: bridge.test.ts  deep-link.test.ts  eslint-rule.test.ts  native-bridge.test.ts  setup.ts
installer/: build-installer.ps1  viscos.wxs
installer/winget/manifests/w/Winterus20/Viscos/0.1.0/: Winterus20.Viscos.installer.yaml  Winterus20.Viscos.yaml
