[package]
name = "viscos-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Viscos persistent + in-memory cache (SQLite WAL + moka TinyLFU + refinery migrations). Faz 4.0 Dalga 1 (ADR-0010)."

[dependencies]
viscos-core = { path = "../viscos-core" }
viscos-config = { path = "../viscos-config" }
viscos-error = { path = "../viscos-error" }

# DB + connection pool
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# Refinery: `embed_migrations!` macros requires the migrations folder at compile-time.
refinery = { workspace = true }

# Async runtime — sadece moka future cache ihtiyacı
tokio = { workspace = true }

# In-memory cache
moka = { workspace = true }

# Serde for tier config serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Structured logging
tracing = { workspace = true }

# Error handling (thiserror enum + From impl'leri, ADR-0007)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Sync primitive — `Mutex<Connection>` for single-threaded repository impls
# (Faz 4 moka future cache zaten thread-safe; SQLite pool thread-safe ama
# raw connection değil — repository sync API için parking_lot mutex tercih edildi).
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }