[package]
name = "viscos-distribution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Viscos distribution, auto-update, crash reporting, profiling, code signing, and CEF backend management (Faz 8.0 + 8.5)."

[features]
# dhat heap profiling — `cargo run --features dhat --release`.
# Üretim binary'sinde YOK; release build'de disabled kalır (cargo_deny policy).
default = []

[dependencies]
viscos-core = { path = "../viscos-core" }
viscos-error = { path = "../viscos-error" }
viscos-config = { path = "../viscos-config" }
viscos-webview = { path = "../viscos-webview" }

self_update = { workspace = true }
sha2 = { workspace = true }
dhat = { workspace = true, optional = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = "0.8"