[package]
name = "viscos-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Viscos content-addressable hybrid media cache with AES-GCM encryption. Faz 4.0 (ADR-0010 §B)."

[dependencies]
viscos-cache = { path = "../viscos-cache" }
viscos-error = { path = "../viscos-error" }
viscos-core = { path = "../viscos-core" }
aes-gcm = { workspace = true }
foyer = { workspace = true }
foyer-storage = { workspace = true }
moka = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
keyring-core = { workspace = true }
windows-native-keyring-store = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
