[package]
name = "viscos-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native shell — tao event loop, tray icon, iced renderer altyapısı (Faz 1.0 stub)."

[dependencies]
viscos-core = { path = "../viscos-core" }
viscos-error = { path = "../viscos-error" }
viscos-config = { path = "../viscos-config" }
viscos-webview = { path = "../viscos-webview" }
viscos-ipc = { path = "../viscos-ipc" }
viscos-watchdog = { path = "../viscos-watchdog" }

tao = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
