[package]
name = "viscos-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Viscos telemetry store — GDI time-series + restart events in SQLite (MVP-3 / Faz 1.5)."

[dependencies]
viscos-error = { path = "../viscos-error" }

rusqlite = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
